--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </ul>
                     <p>My primary programming language is Python - through the Anaconda platform I use Jupyter Notebooks (JupyterLab) to perform EDA and preliminary modeling.</p>
                     
-                    <p>For interactive data visualizations I use Tableau for building dashboards and Gephi for graph visualization.</p>
+                    <p>For interactive data visualizations I use <b>Tableau for building dashboards</b> and <b>Gephi for graph visualization.</b></p>
                     
                     <div class="subheading mb-3">Documentation Languages & Tools</div>
                     <ul>
