--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/colin-murphy-66a298111"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Curf"><i class="fab fa-github"></i></a>
-                        <!--<a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>-->
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a> -->
+                        <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
             </section>
