--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">R&D Data Scientist</h3>
+                            <div class="subheading mb-3">PALL Corporation</div><p>
+                            <ul>
+                            	<li>Conducted data analysis as needed for New Product Development and Manufacturing Sustainability - anovas, sampling plans, specification alignment, designed experiments as well as more advance techniques like machine learning for predictive modelling and interactive data visualizations.</li>
+                            	<li>Contributed to the development of data tools and data apps for use in manufacturing and R&D.</li>
+                            	<li>Worked with machine learning engineers and data engineers to develop and deploy models at scale.</li>
+							</p>
+						</div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2022 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Data Scientist</h3>
                             <div class="subheading mb-3">Johnson and Johnson</div><p>
                             <ul>
