--- a/index.html
+++ b/index.html
@@ -262,6 +262,10 @@
 		  			                    <hr></hr>
 
 		  			<div class="subheading mb-3">Project Papers</div>
+		    		  	<p class="mb-1">
+					<a href="./assets/docs/DS591_FinalReport_EWeaver.pdf">E-Weaver: Sustainable Clothing Aggregation and Recommendation System</a>
+					(Colin Murphy, Matthew Merenich, Dayun Piao, Zifeng Wang)
+		  			</p>
 		  			<p class="mb-1">
 					<a href="./assets/docs/CS615_Project__CM.pdf">Deep Learning and Chemometrics: Quantitative and Qualitative Spectroscopy Interpretation of Aqueous Solutions</a>
 					(Colin Murphy)
