--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
 		  			<div class="subheading mb-3">Project Papers</div>
 		    		  	<p class="mb-1">
 					<a href="./assets/docs/DS591_FinalReport_EWeaver.pdf">E-Weaver: Sustainable Clothing Aggregation and Recommendation System (Part 1: Data acquisition and EDA)</a>
-					(Colin Murphy, Matthew Merenich, Dayun Piao, Zifeng Wang)
+					</p>
+		    			<p class="mb-1">
 					<a href="./assets/docs/DS592_EWeaver_Final_Paper.pdf">E-Weaver: Sustainable Clothing Aggregation and Recommendation System (Part 2: Modeling)</a>
 					(Colin Murphy, Matthew Merenich, Dayun Piao, Zifeng Wang)
 		  			</p>
