--- a/index.html
+++ b/index.html
@@ -266,11 +266,12 @@
 
 		  			<div class="subheading mb-3">Project Papers</div>
 		    		  	<p class="mb-1">
-					<a href="./assets/docs/DS591_FinalReport_EWeaver.pdf">E-Weaver: Sustainable Clothing Aggregation and Recommendation System (Part 1: Data acquisition and EDA) - paper available upon request</a>
+					<a href="./assets/docs/DS591_FinalReport_EWeaver.pdf">E-Weaver: Sustainable Clothing Aggregation and Recommendation System (Part 1: Data acquisition and EDA)</a>
+					- paper available upon request
 					</p>
 		    			<p class="mb-1">
-					<a href="./assets/docs/DS592_EWeaver_Final_Paper.pdf">E-Weaver: Sustainable Clothing Aggregation and Recommendation System (Part 2: Modeling) - paper available upon request</a>
-					(Colin Murphy, Matthew Merenich, Dayun Piao, Zifeng Wang)
+					<a href="./assets/docs/DS592_EWeaver_Final_Paper.pdf">E-Weaver: Sustainable Clothing Aggregation and Recommendation System (Part 2: Modeling)</a>
+					(Colin Murphy, Matthew Merenich, Dayun Piao, Zifeng Wang)  - paper available upon request
 		  			</p>
 		  			<p class="mb-1">
 					<a href="./assets/docs/CS615_Project__CM.pdf">Deep Learning and Chemometrics: Quantitative and Qualitative Spectroscopy Interpretation of Aqueous Solutions</a>
